aravaca_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-aravaca
spec:
  type: NodePort
  ports:
  - port: 20000
    targetPort: 9091
    nodePort: 30004
  selector:
    role: aravaca
