prom-aravaca_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-server-prom-aravaca
spec:
  type: NodePort
  ports:
  - port: 20000
    targetPort: 9090
    nodePort: 30304
  selector:
    role: prom-aravaca
