prom-simancas_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-server-prom-simancas
spec:
  type: NodePort
  ports:
  - port: 20000
    targetPort: 9090
    nodePort: 30305
  selector:
    role: prom-simancas
