simancas_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-simancas
spec:
  type: NodePort
  ports:
  - port: 20000
    targetPort: 9091
    nodePort: 30005
  selector:
    role: simancas
