simancas_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simancas-ingress
  namespace: simancas-p5
spec:
  rules:
  - host: simancas.monitor.es
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: np-server-prom-simancas
            port:
              number: 20000
